# mmos_core

./: MANIFEST.in  pyproject.toml  setup.py
mmos_core/: hooks.py  install.py  modules.txt  overrides.py
mmos_core/public/css/: mmos-branding.css
mmos_core/translations/: it.csv
